test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/stdout.snap
---
source: test/tests/tests.rs
snapshot_kind: text
---
> forc build --path test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics --release --ir final
exit status: 1
output:
    Building test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics
   Compiling library core (sway-lib-core)
   Compiling library std (sway-lib-std)
// IR: Final
library {
}

   Compiling script const_generics (test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics)
error
 --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:7:15
  |
5 | }
6 | 
7 | impl<T, const N: u64> A for [T; N] {
  |               ^ This needs "const_generics" to be enabled, but it is currently disabled. For more details go to https://github.com/FuelLabs/sway/issues/6860.
8 |     fn lenxxx(self) -> u64 {
9 |         N
  |
____

  Aborting due to 1 error.
error: Failed to compile const_generics
